# aoc

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run-day.sh  start-day.sh  template.cpp
.github/workflows/: badges.yml  build.yml
2015/: CMakeLists.txt
2015/src/: day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
2016/: CMakeLists.txt
2016/src/: day1.cpp
2017/: CMakeLists.txt
2017/src/: day1.cpp
2018/: CMakeLists.txt
2018/src/: day1.cpp
2019/: CMakeLists.txt
2019/src/: day1.cpp  day11.cpp  day12.cpp  day13.cpp  day15.cpp  day17.cpp  day19.cpp  day2.cpp  day20.cpp  day3.cpp  day8.cpp  intcode.cpp  intcode.h
2020/: CMakeLists.txt
2020/inputs/: day4
2020/src/: day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
2021/: CMakeLists.txt
2021/inputs/: day19  day24  day24a  day24b  day24c
2021/src/: day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day21.cpp  day22.cpp  day23-2.cpp  day23.cpp  day24.cpp  day25.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
2022/: CMakeLists.txt
2022/inputs/: day11
2022/src/: day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
2023/: CMakeLists.txt
2023/inputs/: day4
2023/src/: day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp
2024/: CMakeLists.txt
2024/inputs/: day12  day13  day17
2024/src/: day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
inputs/: day13  day2
src/: CMakeLists.txt  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day21.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  intcode.cpp  intcode.h
src/src/: day1.cpp
utils/: CMakeLists.txt
utils/include/utils/: ctre.h  grid.h  utils.h  vector.h
utils/src/: global.h  md5.c  md5.h  regex.cpp  utils.cpp
