cmake_minimum_required(VERSION 3.10)

project(AOC C CXX)

set(CMAKE_CXX_STANDARD 23)

add_subdirectory(utils)
add_subdirectory(vendor)

add_subdirectory(2015)
add_subdirectory(2016)
add_subdirectory(2017)
add_subdirectory(2018)
add_subdirectory(2019)
add_subdirectory(2020)
add_subdirectory(2021)
add_subdirectory(2022)
add_subdirectory(2023)
