add_executable(2022-day1 src/day1.cpp)
target_link_libraries(2022-day1 utils)

# add_executable(2022-day2 src/day2.cpp)
# target_link_libraries(2022-day2 utils)

# add_executable(2022-day3 src/day3.cpp)
# target_link_libraries(2022-day3 utils)

# add_executable(2022-day4 src/day4.cpp)
# target_link_libraries(2022-day4 utils)

# add_executable(2022-day5 src/day5.cpp)
# target_link_libraries(2022-day5 utils)

# add_executable(2022-day6 src/day6.cpp)
# target_link_libraries(2022-day6 utils)

# add_executable(2022-day7 src/day7.cpp)
# target_link_libraries(2022-day7 utils)

# add_executable(2022-day8 src/day8.cpp)
# target_link_libraries(2022-day8 utils)

# add_executable(2022-day9 src/day9.cpp)
# target_link_libraries(2022-day9 utils)

# add_executable(2022-day10 src/day10.cpp)
# target_link_libraries(2022-day10 utils)

# add_executable(2022-day11 src/day11.cpp)
# target_link_libraries(2022-day11 utils)

# add_executable(2022-day12 src/day12.cpp)
# target_link_libraries(2022-day12 utils)

# add_executable(2022-day13 src/day13.cpp)
# target_link_libraries(2022-day13 utils)

# add_executable(2022-day14 src/day14.cpp)
# target_link_libraries(2022-day14 utils)

# add_executable(2022-day15 src/day15.cpp)
# target_link_libraries(2022-day15 utils)

# add_executable(2022-day16 src/day16.cpp)
# target_link_libraries(2022-day16 utils)

# add_executable(2022-day17 src/day17.cpp)
# target_link_libraries(2022-day17 utils)

# add_executable(2022-day18 src/day18.cpp)
# target_link_libraries(2022-day18 utils)

# add_executable(2022-day19 src/day19.cpp)
# target_link_libraries(2022-day19 utils)

# add_executable(2022-day20 src/day20.cpp)
# target_link_libraries(2022-day20 utils)

# add_executable(2022-day21 src/day21.cpp)
# target_link_libraries(2022-day21 utils)

# add_executable(2022-day22 src/day22.cpp)
# target_link_libraries(2022-day22 utils)

# add_executable(2022-day23 src/day23.cpp)
# target_link_libraries(2022-day23 utils)

# add_executable(2022-day23-2 src/day23-2.cpp)
# target_link_libraries(2022-day23-2 utils)

# add_executable(2022-day24 src/day24.cpp)
# target_link_libraries(2022-day24 utils)

# add_executable(2022-day25 src/day25.cpp)
# target_link_libraries(2022-day25 utils)
