add_executable(2023-day1 src/day1.cpp)
target_link_libraries(2023-day1 utils)

add_executable(2023-day2 src/day2.cpp)
target_link_libraries(2023-day2 utils)

add_executable(2023-day3 src/day3.cpp)
target_link_libraries(2023-day3 utils)

add_executable(2023-day4 src/day4.cpp)
target_link_libraries(2023-day4 utils)

add_executable(2023-day6 src/day6.cpp)
target_link_libraries(2023-day6 utils)

add_executable(2023-day5 src/day5.cpp)
target_link_libraries(2023-day5 utils)

add_executable(2023-day7 src/day7.cpp)
target_link_libraries(2023-day7 utils)
