add_executable(2024-day1 src/day1.cpp)
target_link_libraries(2024-day1 utils)

add_executable(2024-day2 src/day2.cpp)
target_link_libraries(2024-day2 utils)

add_executable(2024-day3 src/day3.cpp)
target_link_libraries(2024-day3 utils)

add_executable(2024-day4 src/day4.cpp)
target_link_libraries(2024-day4 utils)
