add_executable(2024-day1 src/day1.cpp)
target_link_libraries(2024-day1 utils)

add_executable(2024-day2 src/day2.cpp)
target_link_libraries(2024-day2 utils)

add_executable(2024-day3 src/day3.cpp)
target_link_libraries(2024-day3 utils)

add_executable(2024-day4 src/day4.cpp)
target_link_libraries(2024-day4 utils)

add_executable(2024-day5 src/day5.cpp)
target_link_libraries(2024-day5 utils)
add_executable(2024-day6 src/day6.cpp)
target_link_libraries(2024-day6 utils)

add_executable(2024-day7 src/day7.cpp)
target_link_libraries(2024-day7 utils)

add_executable(2024-day8 src/day8.cpp)
target_link_libraries(2024-day8 utils)

add_executable(2024-day9 src/day9.cpp)
target_link_libraries(2024-day9 utils)
